added params for pc handler
