# backend/docs/swagger.json
@@ -65,6 +65,56 @@
                     "PC restaurants"
                 ],
                 "summary": "Returns restaurants around Prague College",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Radius (in meters) of the area around a provided or pre-selected starting point. Restaurants in this area will be returned. Radius can be ignored when specified with radius=ignore and lat and lon parameters will no longer be required. When no radius is provided, a default value of 1000 meters is used.",
+                        "name": "radius",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filters restaurants based on a list of cuisines, separated by commas -\u003e cuisine=Czech,English. A restaurant will be returned only if it satisfies all provided cuisines.Available cuisines: American, Italian, Asian, Indian, Japanese, Vietnamese, Spanish, Mediterranean, French, Thai, Mexican, International, Czech, English, Balkan, Brazil, Russian, Chinese, Greek, Arabic, Korean.",
+                        "name": "cuisine",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filters restaurants based on a list of price ranges, separated by commas -\u003e price-range=0-300,600-. A restaurant will be returned if it satisfies at least one provided price range. Available price ranges: 0-300,300-600,600-",
+                        "name": "price-range",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filters out all non vegetarian restaurants.",
+                        "name": "vegetarian",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filters out all non vegan restaurants.",
+                        "name": "vegan",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filters out all non gluten free restaurants.",
+                        "name": "gluten-free",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filters out all restaurants that don't have a takeaway option.",
+                        "name": "takeaway",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filters out all restaurants that don't have a delivery option.",
+                        "name": "delivery-options",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -200,7 +250,7 @@
                 },
                 "Cuisines": {
                     "type": "string",
-                    "example": "Italian, Czech"
+                    "example": "Italian,Czech"
                 },
                 "DeliveryOptions": {
                     "type": "string"
@@ -218,7 +268,7 @@
                 },
                 "Images": {
                     "type": "string",
-                    "example": "image1.com"
+                    "example": "image1.com, image2.com"
                 },
                 "Lat": {
                     "type": "number",
@@ -268,18 +318,19 @@
         "main.responseAutocompleteJSON": {
             "type": "object",
             "properties": {
+                "Data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.restaurantAutocomplete"
+                    }
+                },
                 "Msg": {
                     "type": "string",
                     "example": "Success"
                 },
                 "Status": {
-                    "type": "integer"
-                },
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.restaurantAutocomplete"
-                    }
+                    "type": "integer",
+                    "example": 200
                 }
             }
         },
@@ -320,6 +371,10 @@
         "main.restaurantAutocomplete": {
             "type": "object",
             "properties": {
+                "Address": {
+                    "type": "string",
+                    "example": "Polská 13"
+                },
                 "District": {
                     "type": "string",
                     "example": "Praha 1"
@@ -327,6 +382,10 @@
                 "ID": {
                     "type": "integer",
                     "example": 1
+                },
+                "Image": {
+                    "type": "string",
+                    "example": "url.com"
                 },
                 "Name": {
                     "type": "string",
